--- a/.github/workflows/device_plugin_coverity.yaml
+++ b/.github/workflows/device_plugin_coverity.yaml
@@ -47,6 +47,7 @@ jobs:
 
       - name: Load coverity from cache
         id: cache-coverity
+        if: github.ref_type != 'tag'
         # cache@v4.2.3 released 2025 March 19. SHA pinned for enhanced security
         uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684
         env:
