--- a/.github/workflows/idv-iso-builder.yaml
+++ b/.github/workflows/idv-iso-builder.yaml
@@ -11,7 +11,7 @@ permissions:
 on:
   push:
     branches:
-      - emt-idv-iso-update-build-tag
+      - emt-dv-iso
       - main
   workflow_dispatch:
     # Inputs the workflow accepts.
