--- a/sample-application/discrete/sidecar/hdmi2.yaml
+++ b/sample-application/discrete/sidecar/hdmi2.yaml
@@ -7,6 +7,6 @@ data:
     #!/bin/sh
     tempFile=`mktemp`
     echo $4 > $tempFile
-    sed -i "s|/devices>|/devices> <qemu:commandline> <qemu:arg value='-display'/> <qemu:arg value='gtk,gl=on,full-screen=on,zoom-to-fit=on,window-close=off,input=off,connectors.0=HDMI-2'/> <qemu:env name='DISPLAY' value=':0'/> <qemu:arg value='-device'/> <qemu:arg value='driver=virtio-vga,max_outputs=1,blob=true,bus=pcie.0,addr=0x3'/> <qemu:arg value='-usb'/> <qemu:arg value='-device'/> <qemu:arg value='usb-host,hostbus=3,hostport=3.3'/> <qemu:arg value='-usb'/> <qemu:arg value='-device'/> <qemu:arg value='usb-host,hostbus=3,hostport=3.4'/> </qemu:commandline>|" $tempFile
+    sed -i "s|/devices>|/devices> <qemu:commandline> <qemu:arg value='-display'/> <qemu:arg value='gtk,gl=on,full-screen=on,zoom-to-fit=on,window-close=off,input=off,connectors.0=HDMI-2,hw-cursor=on'/> <qemu:env name='DISPLAY' value=':0'/> <qemu:arg value='-device'/> <qemu:arg value='driver=virtio-vga,max_outputs=1,blob=true,render_sync=false,bus=pcie.0,addr=0x3'/> <qemu:arg value='-usb'/> <qemu:arg value='-device'/> <qemu:arg value='usb-host,hostbus=3,hostport=3.3'/> <qemu:arg value='-usb'/> <qemu:arg value='-device'/> <qemu:arg value='usb-host,hostbus=3,hostport=3.4'/> </qemu:commandline>|" $tempFile
     echo $tempFile > /tmp/t.xml
     cat $tempFile
