--- a/.github/workflows/qemu-kubevirt.yaml
+++ b/.github/workflows/qemu-kubevirt.yaml
@@ -389,6 +389,12 @@ jobs:
 
           # git apply $EDV_HOME/kubevirt-patch/0001-Patching-Kubevirt-with-GTK-libraries_v1.patch
 
+          cp $EDV_HOME/kubevirt-patch/WORKSPACE ./
+
+          cp $EDV_HOME/kubevirt-patch/rpm-BUILD.bazel ./rpm/BUILD.bazel
+
+          cp $EDV_HOME/kubevirt-patch/cmd-virtlauncher.bazel ./cmd/virt-launcher/BUILD.bazel 
+
           mkdir build
           cp $EDV_HOME/qemu-artifact/qemu-system-x86_64 build/qemu-system-x86_64
 
