--- a/kubevirt-patch/WORKSPACE
+++ b/kubevirt-patch/WORKSPACE
@@ -8221,7 +8221,7 @@ rpm(
 http_file(
     name = "custom-qemu",
     downloaded_file_path = "qemu-kvm",
-    sha256 = "bf201611cf29335032d7086e2095826ca3f2246595e67b4ba025f3691a48cfc1",
+    sha256 = "<SHA256SUM_OF_PATCHED_QEMU>",
     urls = [
         "file:///root/go/src/kubevirt.io/kubevirt/build/qemu-system-x86_64",
     ],
